# CoRiMa

./: README.md  sample.json
old-repo/risk_model/: README.md
old-repo/smart_cooperative_intersection_wrapper-main/src/risk_model_wrapper/: run_risk_model.py
old-repo/smart_cooperative_intersection_wrapper-main/tests/integration/: __init__.py
risk_model/: risk_model-1.0.0-py3-none-any.whl
smart_cooperative_intersection_wrapper-main/: ci-lint.sh  ci-typing.sh  pkgInfo.py  pyproject.toml
smart_cooperative_intersection_wrapper-main/data/Export_Honda/example1/: processed_sample_data.json  sample.json
smart_cooperative_intersection_wrapper-main/smart_cooperative_intersection_wrapper-main/: .gitlab-ci.yml  README.md  ci-bst-checks.sh  ci-format.sh  ci-integration-tests.sh
smart_cooperative_intersection_wrapper-main/smart_cooperative_intersection_wrapper-main/src/risk_model_wrapper/: predict_collisions.py
smart_cooperative_intersection_wrapper-main/smart_cooperative_intersection_wrapper-main/tests/integration/: integration_test.py
smart_cooperative_intersection_wrapper-main/src/risk_model_wrapper/: lane_info.py  line_string_test.py  predict_collisions.py  test.py
smart_cooperative_intersection_wrapper-main/tests/integration/: integration_test.py
