[tool.poetry]
name = "risk-model-wrapper"
version = "1.0.0"
description = ""
authors = ["Manuel Mühlig <manuel.muehlig@honda-ri.de>"]
readme = "README.md"
packages = [{include = "risk_model_wrapper", from = "src"}]

[tool.poetry.dependencies]
python = "~3.8"
risk-model = { version = "1.0.0", source = "gitlab" }
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.2"
mypy = "^0.971"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
run_risk_model = "risk_model_wrapper.run_risk_model:main"

[[tool.poetry.source]]
name = "gitlab"
url = "https://dmz-gitlab.honda-ri.de/api/v4/projects/441/packages/pypi/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 120

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  "fixme",
  "useless-import-alias",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "duplicate-code"
]
enable = ["useless-suppression"]
good-names = "i,v,ep"

[tool.mypy]
files = "src"

warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

disallow_untyped_defs = true
no_implicit_optional = true

show_error_context = true
show_error_codes = true
show_column_numbers = true
pretty = true

enable_error_code = ["ignore-without-code"]
